Product Service Refactor: Remove Unnecesary Async add Cacheble